# cpp-login-app

./: CMakeLists.txt  README.md  Secure-app.sln  main.cpp  main2.cpp  users.txt
app-gui/: Main.cpp  Main.h  app-gui.vcxproj  app-gui.vcxproj.filters  auth.cpp  auth.h  login_panel.cpp  login_panel.h  scan_panel.cpp  scan_panel.h
cpp-login-app/: main.cpp  main2.cpp  qrcodereader.cpp
